--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\202110291810199_mig1.Designer.cs">
       <DependentUpon>202110291810199_mig1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111061537199_mig_edit1.cs" />
+    <Compile Include="Migrations\202111061537199_mig_edit1.Designer.cs">
+      <DependentUpon>202111061537199_mig_edit1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,6 +92,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202110291810199_mig1.resx">
       <DependentUpon>202110291810199_mig1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111061537199_mig_edit1.resx">
+      <DependentUpon>202111061537199_mig_edit1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
