--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -51,10 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstracts\IAboutService.cs" />
     <Compile Include="Abstracts\ICategoryService.cs" />
+    <Compile Include="Abstracts\IContentService.cs" />
     <Compile Include="Abstracts\IHeadingService.cs" />
     <Compile Include="Abstracts\IWriterService.cs" />
+    <Compile Include="Concreate\AboutManager.cs" />
     <Compile Include="Concreate\CategoryManager.cs" />
+    <Compile Include="Concreate\ContentManager.cs" />
     <Compile Include="Concreate\HeadingManager.cs" />
     <Compile Include="Concreate\WriterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
